--- a/pdf_renderer/Gemfile
+++ b/pdf_renderer/Gemfile
@@ -12,4 +12,7 @@ gemspec
 
 # To use a debugger
 # gem 'byebug', group: [:development, :test]
+gem 'rails', '4.0.13'
+
+gem 'actionmailer', '4.0.13'
 
