--- a/.bundle/config
+++ b/.bundle/config
@@ -1,2 +1,3 @@
 ---
+'BUNDLE_WITHOUT: ''production #BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/': https://ruby.taobao.org'
 BUNDLE_WITHOUT: 'production #BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/: https://ruby.taobao.org'
